# autoresearch-circuit

./: README.md  agentic_circuit_search_prompt.md  agentic_loop.py  archive.py  config.py  evaluator.py  grammar.py  inner_optimizer.py  model_builder.py  outer_loop.py  pyproject.toml  run_search.py  viz.py
